[package]
name = "async_http2"
version = "0.1.0"
edition = "2018"

[lib]
name = "async_http2"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.13", features = ["extension-module"] }
pyo3-asyncio = { version = "0.13", features = ["tokio-runtime"] }
tokio = "1.4"
reqwest = { version = "0.11", features = ["json", "__rustls"] }
h2 = "0.3.3"
futures = { version = "0.3.8" }
